fix spacing

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -13,7 +13,8 @@ html, body {
 	background-color: #FFF;
 	max-width: 900px;
 	width: 100%;
-	margin: 40px auto;
+	margin: 0 auto;
+	padding: 40px 0;
 
 	@media screen and (max-width: 768px) {
 		margin: 0;
